--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="A basic page that is built to test my abilities in HTML and CSS for 24kGoldn"
+		/>
 		<title>About Us</title>
 	</head>
 	<body>
