--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
 		<header>
 			<nav>
 				<ul>
-					<li>Home</li>
-					<li>Store</li>
-					<li>About</li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="store.html">Store</a></li>
+					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
 			<hr />
@@ -63,9 +63,25 @@
 		<footer>
 			<h3>24kGoldn</h3>
 			<ul>
-				<li><img src="/images/youtube.png" /></li>
-				<li><img src="/images/spotify.png" /></li>
-				<li><img src="/images/twitter.png" /></li>
+				<li>
+					<a
+						target="_blank"
+						href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
+						><img src="/images/youtube.png"
+					/></a>
+				</li>
+				<li>
+					<a
+						target="_blank"
+						href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
+						><img src="/images/spotify.png"
+					/></a>
+				</li>
+				<li>
+					<a target="_blank" href="https://twitter.com/24kGoldn"
+						><img src="/images/twitter.png"
+					/></a>
+				</li>
 			</ul>
 		</footer>
 	</body>
