linked style.css to all pages

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 			name="description"
 			content="A basic page that is built to test my abilities in HTML and CSS for 24kGoldn"
 		/>
+		<link rel="stylesheet" href="style.css" />
 		<title>About Us</title>
 	</head>
 	<body>
