--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="A basic page that is built to test my abilities in HTML and CSS for 24kGoldn">
+        <link rel="stylesheet" href="style.css" />
 		<title>24kGoldn</title>
 	</head>
 	<body>
