Completed style tutorial videos 1 & 2, DO Store pg

--- a/about.html
+++ b/about.html
@@ -13,19 +13,18 @@
 		<title>About Us</title>
 	</head>
 	<body>
-		<header>
-			<nav>
+		<header class="mainHeader">
+			<nav class="nav mainnav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="store.html">Store</a></li>
 					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
-			<hr />
-			<h1>24kGoldn</h1>
+			<h1 class="artistName artistName-Large">24kGoldn</h1>
 		</header>
-		<section>
-			<h2>About Us</h2>
+		<section class="content-section container">
+			<h2 class="section-header">About Us</h2>
 			<p>
 				Golden Landis Von Jones, known professionally as 24kGoldn, is an
 				American rapper and singer. In 2019, he rose to fame with his single,
@@ -33,7 +32,7 @@
 				certified platinum by the Recording Industry Association of America in
 				April 2020.
 			</p>
-			<img src="images/24kGoldn_albumArt.jpg" />
+			<img class="about-artist-img" src="images/24kGoldn_albumArt.jpg" />
 			<p>
 				24kGoldn was born Golden Landis Von Jones in 2000. Growing up in a
 				lively neighborhood in the Bay Area, he was exposed to different
@@ -61,29 +60,31 @@
 				with the single "Prada," featuring Lil Tecca.
 			</p>
 		</section>
-		<footer>
-			<h3>24kGoldn</h3>
-			<ul>
-				<li>
-					<a
-						target="_blank"
-						href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
-						><img src="/images/youtube.png"
-					/></a>
-				</li>
-				<li>
-					<a
-						target="_blank"
-						href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
-						><img src="/images/spotify.png"
-					/></a>
-				</li>
-				<li>
-					<a target="_blank" href="https://twitter.com/24kGoldn"
-						><img src="/images/twitter.png"
-					/></a>
-				</li>
-			</ul>
+		<footer class="main-footer">
+			<div class="container main-footer-container">
+				<h3 class="artistName">24kGoldn</h3>
+				<ul class="nav footernav">
+					<li>
+						<a
+							target="_blank"
+							href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
+							><img src="/images/youtube.png"
+						/></a>
+					</li>
+					<li>
+						<a
+							target="_blank"
+							href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
+							><img src="/images/spotify.png"
+						/></a>
+					</li>
+					<li>
+						<a target="_blank" href="https://twitter.com/24kGoldn"
+							><img src="/images/twitter.png"
+						/></a>
+					</li>
+				</ul>
+			</div>
 		</footer>
 	</body>
 </html>
