--- a/index.html
+++ b/index.html
@@ -10,109 +10,89 @@
 		<title>24kGoldn</title>
 	</head>
 	<body>
-		<header>
-			<nav>
+		<header class="mainHeader">
+			<nav class="nav mainnav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="store.html">Store</a></li>
 					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
-			<hr />
-			<h1>24kGoldn</h1>
-			<button type="button">Get my latest Album</button>
+			<h1 class="artistName artistName-Large">24kGoldn</h1>
+            <div class="container">
+			    <button class="btn btn-header" type="button">Get my latest Album</button>
+            </div>
             <br>
             <br>
             <!-- TODO Find a suitable background image -->
-            <button type="button">&#9658</button>
+            <button class="btn btn-header btn-play" type="button">&#9658</button>
 		</header>
-        <section>
-            <h2>Tours</h2>
+        <section class="content-section container">
+            <h2 class="section-header">Tours</h2>
             <div>
-                <div>
-                    <strong>JAN 12</strong>
-                    &lt; &gt;
-                    <span>MELBOURNE, AUS</span>
-                    &lt; &gt;
-                    <span>MELBOURNE MYER MUSIC BOWL</span>
-                    &lt; &gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">JAN 12</span>
+                    <span class="tour-item tour-city">MELBOURNE, AUS</span>
+                    <span class="tour-item tour-arena">MELBOURNE MYER MUSIC BOWL</span>
+                    <button class="btn btn-tour btn-primary" type="button">BUY TICKETS</button>
                 </div>
-                <div>
-                    <strong>MAR 23</strong>
-                    &lt; &gt;
-                    <span>QUEENSLAND, AUS</span>
-                    &lt; &gt;
-                    <span>BROADBEACH MUSIC THEATER</span>
-                    &lt; &gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">MAR 23</span>
+                    <span class="tour-item tour-city">QUEENSLAND, AUS</span>
+                    <span class="tour-item tour-arena">BROADBEACH MUSIC THEATER</span>
+                    <button class="btn btn-tour btn-primary" type="button">BUY TICKETS</button>
                 </div>
-                <div>
-                    <strong>JUL 16</strong>
-                    &lt; &gt;
-                    <span>NEW SOUTH WALES, AUS</span>
-                    &lt; &gt;
-                    <span>NEW SOUTH WALES CENTRAL THEATER</span>
-                    &lt; &gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">JUL 16</span>
+                    <span class="tour-item tour-city">NEW SOUTH WALES, AUS</span>
+                    <span class="tour-item tour-arena">NEW SOUTH WALES CENTRAL THEATER</span>
+                    <button class="btn btn-tour btn-primary" type="button">BUY TICKETS</button>
                 </div>
-                <div>
-                    <strong>NOV 19</strong>
-                    &lt; &gt;
-                    <span>MELBOURNE, AUS</span>
-                    &lt; &gt;
-                    <span>MELBOURNE MYER MUSIC BOWL</span>
-                    &lt; &gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">NOV 19</span>
+                    <span class="tour-item tour-city">MELBOURNE, AUS</span>
+                    <span class="tour-item tour-arena">MELBOURNE MYER MUSIC BOWL</span>
+                    <button class="btn btn-tour btn-primary" type="button">BUY TICKETS</button>
                 </div>
-                <div>
-                    <strong>NOV 30</strong>
-                    &lt; &gt;
-                    <span>MELBOURNE, AUS</span>
-                    &lt; &gt;
-                    <span>MELBOURNE MYER MUSIC BOWL</span>
-                    &lt; &gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">NOV 30</span>
+                    <span class="tour-item tour-city">MELBOURNE, AUS</span>
+                    <span class="tour-item tour-arena">MELBOURNE MYER MUSIC BOWL</span>
+                    <button class="btn btn-tour btn-primary" type="button">BUY TICKETS</button>
                 </div>
-                <div>
-                    <strong>DEC 16</strong>
-                    &lt; &gt;
-                    <span>TASMANIA, AUS</span>
-                    &lt; &gt;
-                    <span>TASMAN MUSIC BOWL</span>
-                    &lt; &gt;
-                    <button type="button">BUY TICKETS</button>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">DEC 16</span>
+                    <span class="tour-item tour-city">TASMANIA, AUS</span>
+                    <span class="tour-item tour-arena">TASMAN MUSIC BOWL</span>
+                    <button class="btn btn-tour btn-primary" type="button">BUY TICKETS</button>
                 </div>
             </div>
         </section>
-		<footer>
-			<h3>24kGoldn</h3>
-			<ul>
-				<li>
-					<a
-						target="_blank"
-						href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
-						><img src="/images/youtube.png"
-					/></a>
-				</li>
-				<li>
-					<a
-						target="_blank"
-						href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
-						><img src="/images/spotify.png"
-					/></a>
-				</li>
-				<li>
-					<a target="_blank" href="https://twitter.com/24kGoldn"
-						><img src="/images/twitter.png"
-					/></a>
-				</li>
-			</ul>
+		<footer class="main-footer">
+			<div class="container main-footer-container">
+				<h3 class="artistName">24kGoldn</h3>
+				<ul class="nav footernav">
+					<li>
+						<a
+							target="_blank"
+							href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
+							><img src="/images/youtube.png"
+						/></a>
+					</li>
+					<li>
+						<a
+							target="_blank"
+							href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
+							><img src="/images/spotify.png"
+						/></a>
+					</li>
+					<li>
+						<a target="_blank" href="https://twitter.com/24kGoldn"
+							><img src="/images/twitter.png"
+						/></a>
+					</li>
+				</ul>
+			</div>
 		</footer>
 	</body>
 </html>
