--- a/store.html
+++ b/store.html
@@ -13,16 +13,15 @@
 		<title>Store</title>
 	</head>
 	<body>
-		<header>
-			<nav>
+		<header class="mainHeader">
+			<nav class="nav mainnav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="store.html">Store</a></li>
 					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
-			<hr />
-			<h1>24kGoldn</h1>
+			<h1 class="artistName artistName-Large">24kGoldn</h1>
 		</header>
 		<section>
 			<h2>Music</h2>
@@ -146,29 +145,31 @@
 				<button role="button">PURCHASE</button>
 			</div>
 		</section>
-		<footer>
-			<h3>24kGoldn</h3>
-			<ul>
-				<li>
-					<a
-						target="_blank"
-						href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
-						><img src="/images/youtube.png"
-					/></a>
-				</li>
-				<li>
-					<a
-						target="_blank"
-						href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
-						><img src="/images/spotify.png"
-					/></a>
-				</li>
-				<li>
-					<a target="_blank" href="https://twitter.com/24kGoldn"
-						><img src="/images/twitter.png"
-					/></a>
-				</li>
-			</ul>
+		<footer class="main-footer">
+			<div class="container main-footer-container">
+				<h3 class="artistName">24kGoldn</h3>
+				<ul class="nav footernav">
+					<li>
+						<a
+							target="_blank"
+							href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
+							><img src="/images/youtube.png"
+						/></a>
+					</li>
+					<li>
+						<a
+							target="_blank"
+							href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
+							><img src="/images/spotify.png"
+						/></a>
+					</li>
+					<li>
+						<a target="_blank" href="https://twitter.com/24kGoldn"
+							><img src="/images/twitter.png"
+						/></a>
+					</li>
+				</ul>
+			</div>
 		</footer>
 	</body>
 </html>
