fixed footer links icons

--- a/store.html
+++ b/store.html
@@ -153,19 +153,19 @@
 						<a
 							target="_blank"
 							href="https://www.youtube.com/channel/UCR-eqHJMez-6oFJklTIqJ5Q"
-							><img src="/images/youtube.png"
+							><img src="images/youtube.png"
 						/></a>
 					</li>
 					<li>
 						<a
 							target="_blank"
 							href="https://open.spotify.com/artist/6fWVd57NKTalqvmjRd2t8Z?si=mXRCX1qtQuCf6hAf4qfikg"
-							><img src="/images/spotify.png"
+							><img src="images/spotify.png"
 						/></a>
 					</li>
 					<li>
 						<a target="_blank" href="https://twitter.com/24kGoldn"
-							><img src="/images/twitter.png"
+							><img src="images/twitter.png"
 						/></a>
 					</li>
 				</ul>
