Finished the CSS for the basic band store page

--- a/store.html
+++ b/store.html
@@ -23,127 +23,149 @@
 			</nav>
 			<h1 class="artistName artistName-Large">24kGoldn</h1>
 		</header>
-		<section>
-			<h2>Music</h2>
-			<div>
-				<div>
-					<strong>Album Coco</strong>
+		<section class="content-section container">
+			<h2 class="section-header">Music</h2>
+			<div class="shop-items">
+				<div class="shop-item">
+					<span class="shop-item-title">Album</span>
+					<span class="shop-item-title">Coco</span>
+					<img class="shop-item-img" src="images/album_Coco.png" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$23.99</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
 				</div>
-				<img src="images/album_Coco.png" />
-				<div>
-					<span>$23.99</span>
-					<button role="button">ADD TO CART</button>
+				<div class="shop-item">
+					<span class="shop-item-title">Album</span>
+					<span class="shop-item-title">Dropped Outta College</span>
+					<img
+						class="shop-item-img"
+						src="images/album_DroppedOuttaCollege.png"
+					/>
+					<div class="shop-item-details">
+						<span class="shop-item-price">$30.00</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
 				</div>
-			</div>
-			<div>
-				<div>
-					<strong>Album Dropped Outta College</strong>
+				<div class="shop-item">
+					<span class="shop-item-title">Album</span>
+					<span class="shop-item-title">El Dorado</span>
+					<img class="shop-item-img" src="images/album_ElDorado.png" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$25.99</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
 				</div>
-				<img src="images/album_DroppedOuttaCollege.png" />
-				<div>
-					<span>$30.00</span>
-					<button role="button">ADD TO CART</button>
-				</div>
-			</div>
-			<div>
-				<div>
-					<strong>Album El Dorado</strong>
-				</div>
-				<img src="images/album_ElDorado.png" />
-				<div>
-					<span>$25.99</span>
-					<button role="button">ADD TO CART</button>
-				</div>
-			</div>
-			<div>
-				<div>
-					<strong>Album Mood</strong>
-				</div>
-				<img src="images/album_Mood.jpg" />
-				<div>
-					<span>$27.50</span>
-					<button role="button">ADD TO CART</button>
-				</div>
-			</div>
-		</section>
-		<section>
-			<h2>Merch</h2>
-			<div>
-				<div>
-					<strong>Bottle</strong>
-				</div>
-				<img src="images/merch_Bottle.jpg" />
-				<div>
-					<span>$21.50</span>
-					<button role="button">ADD TO CART</button>
-				</div>
-			</div>
-			<div>
-				<div>
-					<strong>Cap</strong>
-				</div>
-				<img src="images/merch_Cap.jpg" />
-				<div>
-					<span>$15.00</span>
-					<button role="button">ADD TO CART</button>
-				</div>
-			</div>
-			<div>
-				<div>
-					<strong>Hoodie - Black</strong>
-				</div>
-				<img src="images/merch_Hoodie.jpg" />
-				<div>
-					<span>$65.00</span>
-					<button role="button">ADD TO CART</button>
-				</div>
-			</div>
-			<div>
-				<div>
-					<strong>Hoodie - White</strong>
-				</div>
-				<img src="images/merch_HoodieWhite.jpg" />
-				<div>
-					<span>$65.00</span>
-					<button role="button">ADD TO CART</button>
+				<div class="shop-item">
+					<span class="shop-item-title">Album</span>
+					<span class="shop-item-title">Mood</span>
+					<img class="shop-item-img" src="images/album_Mood.jpg" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$27.50</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
 				</div>
 			</div>
 		</section>
-		<section>
-			<h2>Cart</h2>
-			<div>
-				<strong>ITEM</strong>
-				&lt; &gt;
-				<strong>PRICE</strong>
-				&lt; &gt;
-				<strong>QUANTITY</strong>
+		<section class="content-section container">
+			<h2 class="section-header">Merch</h2>
+			<div class="shop-items">
+				<div class="shop-item">
+					<span class="shop-item-title">Bottle</span>
+					<img class="shop-item-img" src="images/merch_Bottle.jpg" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$21.50</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Cap</span>
+					<img class="shop-item-img" src="images/merch_Cap.jpg" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$15.00</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Hoodie - Black</span>
+					<img class="shop-item-img" src="images/merch_Hoodie.jpg" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$65.00</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Hoodie - White</span>
+					<img class="shop-item-img" src="images/merch_HoodieWhite.jpg" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$65.00</span>
+						<button class="btn btn-primary btn-shop-item" role="button">
+							ADD TO CART
+						</button>
+					</div>
+				</div>
 			</div>
-			<div>
-				<img src="images/album_Coco.png" width="100" />
-				<span>Album Coco</span>
-				&lt; &gt;
-				<span>$23.99</span>
-				&lt; &gt;
-				<input type="number" value="1" />
-				<button role="button">REMOVE</button>
+		</section>
+		<section class="content-section container">
+			<h2 class="section-header">Cart</h2>
+			<div class="cart-row">
+				<span class="cart-item cart-header cart-column">ITEM</span>
+				<span class="cart-item cart-header cart-column">PRICE</span>
+				<span class="cart-item cart-header cart-column">QUANTITY</span>
 			</div>
-			<div>
-				<img src="images/merch_Hoodie.jpg" width="100" />
-				<span>Hoodie Black</span>
-				&lt; &gt;
-				<span>$65.00</span>
-				&lt; &gt;
-				<input type="number" value="2" />
-				<button role="button">REMOVE</button>
+			<div class="cart-items-container">
+				<div class="cart-row">
+					<div class="cart-item cart-column">
+						<img
+							class="cart-item-img"
+							src="images/album_Coco.png"
+							width="100"
+						/>
+						<span class="cart-item-title">Album Coco</span>
+					</div>
+					<span class="cart-price cart-column">$23.99</span>
+					<div class="cart-quantity cart-column">
+						<input class="cart-quantity-input" type="number" value="1" />
+						<button class="btn btn-danger" role="button">REMOVE</button>
+					</div>
+				</div>
+				<div class="cart-row">
+					<div class="cart-item cart-column">
+						<img
+							class="cart-item-img"
+							src="images/merch_Hoodie.jpg"
+							width="100"
+						/>
+						<span class="cart-item-title">Hoodie Black</span>
+					</div>
+					<span class="cart-price cart-column">$65.00</span>
+					<div class="cart-quantity cart-column">
+						<input class="cart-quantity-input" type="number" value="2" />
+						<button class="btn btn-danger" role="button">REMOVE</button>
+					</div>
+				</div>
 			</div>
-			<hr />
-			<div>
-				<strong>Total</strong>
-				<span>$153.99</span>
+			<div class="cart-total">
+				<span class="cart-total-title">Total</span>
+				<span class="cart-total-price">$153.99</span>
 			</div>
-			<div>
-				<button role="button">PURCHASE</button>
-			</div>
+			<button class="btn btn-primary btn-purchase" role="button">
+				PURCHASE
+			</button>
 		</section>
 		<footer class="main-footer">
 			<div class="container main-footer-container">
