added basic remove function in javascript

--- a/store.html
+++ b/store.html
@@ -10,6 +10,7 @@
 			content="A basic page that is built to test my abilities in HTML and CSS for 24kGoldn"
 		/>
 		<link rel="stylesheet" href="style.css" />
+		<script src="store.js" async></script>
 		<title>Store</title>
 	</head>
 	<body>
